--- a/Resources/Prototypes/Recipes/Construction/Graphs/clothing/medsec_hud.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/clothing/medsec_hud.yml
@@ -27,17 +27,7 @@
                 sprite: Objects/Devices/communication.rsi
                 state: walkietalkie
               doAfter: 5
-            - tag: CapacitorStockPart
-              name: конденсатор
-              icon:
-                sprite: Objects/Misc/stock_parts.rsi
-                state: capacitor
-              doAfter: 5
-            - tag: CapacitorStockPart
-              name: конденсатор
-              icon:
-                sprite: Objects/Misc/stock_parts.rsi
-                state: capacitor
-              doAfter: 5
+            - material: Capacitor
+              amount: 1
     - node: medsecHud
       entity: ClothingEyesHudMedSec
