--- a/Resources/Prototypes/Recipes/Construction/Graphs/tools/logic_gate.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/tools/logic_gate.yml
@@ -46,14 +46,8 @@
         doAfter: 1
     - to: memory_cell
       steps:
-      - tag: CapacitorStockPart
-        icon:
-          sprite: Objects/Misc/stock_parts.rsi
-          state: capacitor
-        name: конденсатор
-      - material: Cable
-        amount: 2
-        doAfter: 1
+      - material: Capacitor
+        amount: 1
   - node: logic_gate
     entity: LogicGateOr
     edges:
