--- a/Resources/Prototypes/Stacks/science_stacks.yml
+++ b/Resources/Prototypes/Stacks/science_stacks.yml
@@ -7,6 +7,7 @@
 - type: stack
   id: Capacitor
   name: конденсатор
+  icon: { sprite: /Textures/Objects/Misc/stock_parts.rsi, state: capacitor }
   spawn: CapacitorStockPart
   maxCount: 10
 
