--- a/Resources/Prototypes/Recipes/Construction/Graphs/utilities/wallmount_substation.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/utilities/wallmount_substation.yml
@@ -59,6 +59,7 @@
           doAfter: 0.5
         - material: Capacitor
           amount: 1
+          doAfter: 0.5
       - to: frame
         completed:
         - !type:GivePrototype
