--- a/Resources/Prototypes/Recipes/Construction/utilities.yml
+++ b/Resources/Prototypes/Recipes/Construction/utilities.yml
@@ -385,13 +385,13 @@
   canRotate: true
 
 - type: construction
-  name: gas pipe sensor
+  name: Датчик газовых труб
   id: GasPipeSensor
   graph: GasPipeSensor
   startNode: start
   targetNode: sensor
   category: construction-category-structures
-  description: Reports on the status of the gas within the attached pipe network. 
+  description: Передает на воздушную сигнализацию информацию о газе в присоединенной системе труб.
   icon:
     sprite: Structures/Piping/Atmospherics/gas_pipe_sensor.rsi
     state: icon
