--- a/Resources/Prototypes/Imperial/SpiderClan/Misc/misc.yml
+++ b/Resources/Prototypes/Imperial/SpiderClan/Misc/misc.yml
@@ -20,6 +20,27 @@
 
 - type: entity
   parent: IDCardStandard
+  id: NinjaIDCardStandard
+  name: Spider Clan card
+  description: 1 - Don't kill the ninja.                                                     2 - Don't be exposed.                                      3 - Act quietly, sticking to the shadows.                            4 - Get results by any means necessary.                     5 - Help the clan flourish.
+  suffix: Standard, Crook, SpiderClan
+  components:
+  - type: PresetIdCard
+    job: Ninja
+  - type: Access
+    tags:
+    - Ninja
+  - type: Sprite
+    sprite: Imperial/SpiderClan/Misc/Card.rsi
+    layers:
+    - state: spaceninja
+  - type: Clothing
+    slots:
+    - idcard
+    sprite: Imperial/SpiderClan/Misc/Card.rsi
+
+- type: entity
+  parent: IDCardStandard
   id: NinjaIDCard
   name: Spider Clan card
   description: It looks quite unusual...
