--- a/Resources/Prototypes/Imperial/SpiderClan/Misc/loadouts.yml
+++ b/Resources/Prototypes/Imperial/SpiderClan/Misc/loadouts.yml
@@ -26,6 +26,7 @@
     - Wirecutter
     - Welder
     - Multitool
+    - SpiderClanTerminal
 
 - type: startingGear
   id: AltGreenNinja
@@ -54,6 +55,7 @@
     - Wirecutter
     - Welder
     - Multitool
+    - SpiderClanTerminal
 
 # Наборы красной расцветки
 - type: startingGear
@@ -83,6 +85,7 @@
     - Wirecutter
     - Welder
     - Multitool
+    - SpiderClanTerminal
 
 - type: startingGear
   id: AltRedNinja
@@ -111,6 +114,7 @@
     - Wirecutter
     - Welder
     - Multitool
+    - SpiderClanTerminal
 
 # Наборы синей расцветки
 - type: startingGear
@@ -140,6 +144,7 @@
     - Wirecutter
     - Welder
     - Multitool
+    - SpiderClanTerminal
 
 - type: startingGear
   id: AltBlueNinja
@@ -168,3 +173,4 @@
     - Wirecutter
     - Welder
     - Multitool
+    - SpiderClanTerminal
