--- a/Resources/Prototypes/secret_weights.yml
+++ b/Resources/Prototypes/secret_weights.yml
@@ -1,10 +1,12 @@
+# imperial add-on begin
 - type: weightedRandom
   id: Secret
   weights:
-    Nukeops: 0.20
-    Traitor: 0.60
-    Zombie: 0.04
-    Zombieteors: 0.01
-    Survival: 0.09
-    KesslerSyndrome: 0.01
-    Revolutionary: 0.05
+    Nukeops: 0.1
+    Traitor: 0.5
+    Zombie: 0.05
+    Zombieteors: 0.05
+    Survival: 0.15
+    KesslerSyndrome: 0.05
+    Revolutionary: 0.15
+# imperial add-on end
