--- a/Resources/Prototypes/Imperial/Other/ChemistryRework/Reagents/chemReagentsRework.yml
+++ b/Resources/Prototypes/Imperial/Other/ChemistryRework/Reagents/chemReagentsRework.yml
@@ -365,3 +365,343 @@
         damage:
           types:
             Radiation: 2
+
+## SentryPrimies Medicine
+
+- type: entity
+  name: hardburnkit
+  description: Used to treat those nasty burns. Less effective on caustic burns.
+  parent: BaseHealingItem
+  id: HardBurnKit
+  suffix: Full
+  components:
+  - type: Tag
+    tags:
+    - Ointment
+  - type: Sprite
+    sprite: Imperial/Other/ChemistryRework/medical.rsi
+    state: hardburnkit
+  - type: Item
+    heldPrefix: hardburnkit
+  - type: Healing
+    damageContainers:
+      - Biological
+    damage:
+      types:
+        Heat: -15
+        Cold: -15
+        Shock: -15
+        Caustic: -10
+    healingBeginSound:
+      path: "/Audio/Items/Medical/brutepack_begin.ogg"
+    healingEndSound:
+      path: "/Audio/Items/Medical/brutepack_end.ogg"
+  - type: Stack
+    stackType: HardBurnKit
+    count: 10
+  - type: StackPrice
+    price: 10
+
+- type: entity
+  id: HardBurnKit1
+  parent: HardBurnKit
+  components:
+  - type: Stack
+    stackType: HardBurnKit
+    count: 1
+  - type: Item
+    size: Tiny
+
+- type: entity
+  name: hard trauma pack
+  description: bee32424
+  parent: BaseHealingItem
+  id: HardTraumapack
+  suffix: Full
+  components:
+  - type: Tag
+    tags:
+    - Brutepack
+  - type: Sprite
+    sprite: Imperial/Other/ChemistryRework/medical.rsi
+    state: hardtrauma
+  - type: Healing
+    damageContainers:
+      - Biological
+    damage:
+      groups:
+        Brute: -60 # 5 for each type in the group
+    healingBeginSound:
+      path: "/Audio/Items/Medical/brutepack_begin.ogg"
+    healingEndSound:
+      path: "/Audio/Items/Medical/brutepack_end.ogg"
+  - type: Stack
+    stackType: HardTraumapack
+    count: 10
+  - type: StackPrice
+    price: 10
+
+- type: entity
+  id: HardTraumapack1
+  parent: HardTraumapack
+  components:
+  - type: Stack
+    stackType: HardTraumapack
+    count: 1
+  - type: Item
+    size: Tiny
+
+#Стаки
+- type: stack
+  id: HardBurnKit
+  name: hard-burn-kit
+  icon: {sprite: "/Textures/Objects/Specific/Medical/medical.rsi", state: hardburnkit}
+  spawn: HardBurnKit
+  maxCount: 10
+  itemSize: 1
+
+- type: stack
+  id: HardTraumapack
+  name: hard-trauma-pack
+  icon: {sprite: "/Textures/Objects/Specific/Medical/medical.rsi", state: hardtrauma}
+  spawn: HardTraumapack
+  maxCount: 10
+  itemSize: 1
+
+
+- type: entity
+  id: SalineGlucoseChemistryBottle
+  name: Saline Glucose bottle
+  parent: BaseChemistryEmptyBottle
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink: # This solution name and target volume is hard-coded in ChemMasterComponent
+        maxVol: 30
+        reagents:
+        - ReagentId: SalineGlucose
+          Quantity: 30
+  - type: Tag
+    tags:
+    - Bottle
+
+- type: entity
+  id: SilverSulfadiazineChemistryBottle
+  name: Silver Sulfadiazine bottle
+  parent: BaseChemistryEmptyBottle
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink: # This solution name and target volume is hard-coded in ChemMasterComponent
+        maxVol: 30
+        reagents:
+        - ReagentId: SilverSulfadiazine
+          Quantity: 30
+  - type: Tag
+    tags:
+    - Bottle
+
+- type: entity
+  id: AntiholChemistryBottle
+  name: Antihol bottle
+  parent: BaseChemistryEmptyBottle
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink: # This solution name and target volume is hard-coded in ChemMasterComponent
+        maxVol: 30
+        reagents:
+        - ReagentId: Antihol
+          Quantity: 30
+  - type: Tag
+    tags:
+    - Bottle
+
+- type: entity
+  id: SalbutamolChemistryBottle
+  name: Salbutamol bottle
+  parent: BaseChemistryEmptyBottle
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink: # This solution name and target volume is hard-coded in ChemMasterComponent
+        maxVol: 30
+        reagents:
+        - ReagentId: Salbutamol
+          Quantity: 30
+  - type: Tag
+    tags:
+    - Bottle
+
+
+- type: entity
+  name: large pill canister
+  id: LargePillCanister
+  parent: BaseStorageItem
+  description: Holds up to 15 pills.
+  components:
+  - type: Sprite
+    sprite: Imperial/Other/ChemistryRework/large_pill_canister.rsi
+    state: pill_canister
+  - type: Item
+    sprite: Imperial/Other/ChemistryRework/large_pill_canister.rsi
+  - type: Tag
+    tags:
+    - PillCanister
+  - type: Storage
+    grid:
+    - 0,0,8,1
+    quickInsert: true
+    areaInsert: true
+    areaInsertRadius: 1
+    storageInsertSound: /Audio/Effects/pill_insert.ogg
+    storageRemoveSound: /Audio/Effects/pill_remove.ogg
+    whitelist:
+      components:
+      - Pill
+  - type: Dumpable
+
+
+- type: reagent
+  id: SalineGlucose
+  name: reagent-name-salineglucose
+  group: Medicine
+  desc: reagent-desc-salineglucose
+  physicalDesc: reagent-physical-desc-translucent
+  flavor: medicine
+  color: "#fffde4"
+  metabolisms:
+    Medicine:
+      effects:
+      - !type:HealthChange
+        damage:
+          groups:
+            Brute: -1.25
+            Burn: -0.35
+      - !type:HealthChange
+        conditions:
+        - !type:ReagentThreshold
+          min: 40
+        damage:
+          groups:
+            Brute: 0.65
+            Burn: 0.15
+      - !type:ModifyBloodLevel
+        amount: 6
+      - !type:AdjustReagent
+        reagent: Ethanol
+        amount: 0.065
+
+- type: reagent
+  id: SilverSulfadiazine
+  name: reagent-name-silversulfadiazine
+  group: Medicine
+  desc: reagent-desc-silversulfadiazine
+  physicalDesc: reagent-physical-desc-translucent
+  flavor: medicine
+  color: "#b0fe8a"
+  metabolisms:
+    Medicine:
+      effects:
+      - !type:HealthChange
+        damage:
+          groups:
+            Burn: -1.15
+            Toxin: 0.10
+      - !type:HealthChange
+        conditions:
+        - !type:ReagentThreshold
+          min: 35
+        damage:
+          groups:
+            Burn: 0.80
+
+- type: reagent
+  id: Antihol
+  name: reagent-name-antihol
+  group: Medicine
+  desc: reagent-desc-antihol
+  physicalDesc: reagent-physical-desc-translucent
+  flavor: medicine
+  color: "#b0a28a"
+  metabolisms:
+    Medicine:
+      effects:
+      - !type:HealthChange
+        conditions:
+        - !type:ReagentThreshold
+          min: 15
+        damage:
+          types:
+            Poison: -0.65
+      - !type:GenericStatusEffect
+        key: Drunk
+        time: 1.0
+        type: Remove
+
+- type: reagent
+  id: Salbutamol
+  name: reagent-name-salbutamol
+  group: Medicine
+  desc: reagent-desc-salbutamol
+  physicalDesc: reagent-physical-desc-soothing
+  flavor: medicine
+  color: "#149efd"
+  metabolisms:
+    Medicine:
+      effects:
+      - !type:HealthChange
+        damage:
+          groups:
+            Airloss: -0.90
+
+
+- type: reaction
+  id: SalineGlucose
+  reactants:
+    TableSalt:
+      amount: 1
+    Water:
+      amount: 1
+    Sugar:
+      amount: 1
+  products:
+    SalineGlucose: 5
+
+- type: reaction
+  id: SilverSulfadiazine
+  reactants:
+    Ammonia:
+      amount: 1
+    Silver:
+      amount: 1
+    Sulfur:
+      amount: 1
+    Oxygen:
+      amount: 1
+    Chlorine:
+      amount: 1
+  products:
+    SilverSulfadiazine: 5
+
+- type: reaction
+  id: Salbutamol
+  reactants:
+    Lithium:
+      amount: 1
+    Aluminium:
+      amount: 1
+    Ammonia:
+      amount: 1
+  products:
+    Salbutamol: 5
+
+- type: reaction
+  id: Antihol
+  reactants:
+    Ethanol:
+      amount: 1
+    Charcoal:
+      amount: 1
+  products:
+    Antihol: 4
